# storm-gridftp-dsi

./: ACKNOWLEDGEMENTS  AUTHORS  CHANGES  CREDITS  ChangeLog  Jenkinsfile  Makefile  Makefile.am  README  README.md  bootstrap  configure.ac  rpm.spec  storm-globus-gridftp-nothr.spec.in  storm-globus-gridftp.spec.in
config/: Makefile.am  globus-gridftp-storm
config/init.d/: Makefile.am  globus-gridftp.in  storm-globus-gridftp.in
config/logrotate.d/: Makefile.am  storm-globus-gridftp.in
config/systemd/: storm-globus-gridftp.service
etc/systemd/: storm-globus-gridftp.service
jenkins/: pod.yaml
m4/: globus.m4  globus_pkgconfig.m4  libattr.m4  storm.m4  zlib.m4
src/: Makefile.am  dsi_StoRM.h  globus_gridftp_server_StoRM.c
